# mj

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  flake.nix
include/: CMakeLists.txt
include/J/: Ast.h  CMakeLists.txt  JAstToMlir.h  JDialect.h  JLexer.h  JOps.h  JOps.td  JParser.h  JPrinter.h  JSimplIdentities.h  MJAttrs.td  MJDialect.h  MJDialect.td  Printer.h  Utils.h
lib/: CMakeLists.txt
lib/J/: CMakeLists.txt  JAstToMlir.cpp  JDialect.cpp  JLexer.cpp  JOps.cpp  JParser.cpp  JSimplIdentities.cpp  MJDialect.cpp
programs/: add-left-identity.mj  add.mj  adddot.mj  simple-fun.mj  simple-if.mj
tools/mjc/: mjc.cpp
